--- a/app/assets/stylesheets/jquery.dropdownReplacement.css
+++ b/app/assets/stylesheets/jquery.dropdownReplacement.css
@@ -1,7 +1,7 @@
 div.dropdownOpts {
-  border: 1px inset;
+	border: none;
 	background-color:#FFF;
-	padding: 0;
+	padding-left: 2px;
 	display:none;
 	position:absolute;
 	margin-top: 5px;
@@ -53,13 +53,10 @@ a.dropdownOpt.selectedOpt {
 .dropdown {
 	text-overflow:ellipsis;
 	overflow:hidden;
-	border-style:solid;
-	border-width:1px;
 	cursor:pointer;
 	text-align:left;
   text-decoration:none;
   background:#FFFFFF url('arrow-all.png') no-repeat scroll 100% center;
-	border-color:#404040 #D4D0C8 #D4D0C8 #404040;
 	-webkit-user-select:none;
 	-k-user-select:none;
 	-moz-user-select:moz-none;
@@ -69,7 +66,7 @@ a.dropdownOpt.selectedOpt {
 .dd-theme-classic, .dd-all {
 	background:#FFFFFF url('/select_arrow.png') no-repeat scroll 100% center !important;
 	border-color: #ccc !important;
-	padding: 2px;
+	height: 30px;
 }
 
 .dd-theme-xp, .dd-theme-zuneNOIR {
@@ -84,6 +81,11 @@ a.dropdownOpt.selectedOpt {
 	padding:1px 4px 1px 1px;
 }
 
-select {
-	font-size: .8em;
+input.dd-all {
+	padding-left: 5px;
+	border: 0;
+	width: 100%;
+
+
+	border: 1px solid black;
 }
