Updated articles page with new info

--- a/app/views/downloads/articles.html.erb
+++ b/app/views/downloads/articles.html.erb
@@ -11,7 +11,11 @@ signature auto-feed products. Select the title or picture to read more.</p>
       <h3><a href="/downloads/articles/contractor_supply.pdf" target="_blank">Contractor Supply Magazine</a></h3>
       <h4>Author: Tom Hammel</h4>
       <h4>Edition: Jun - Jul 2013</h4>
-      <p>This is some text as a placeholder talking about Muro products in an article. See this is some more text showing you how this is going to look.</p>
+      <p><em>Contractor Supply is the only magazine
+      exclusively serving the construction supply channel.</em>
+      The most powerful trade groups and most respected
+      brands in the industry are regularly reviewed.
+      See what is happening with Collated Screws and Auto Feed Equipment...</p>
     </div>
   </div>
 
@@ -22,7 +26,8 @@ signature auto-feed products. Select the title or picture to read more.</p>
       <h3><a href="/downloads/articles/boathouse_article.pdf" target="_blank">Professional Deck Builder</a></h3>
       <h4>Author: Kim and Linda Katwijk
       <h4>Edition: March - April 2007</h4>
-      <p>This is some text as a placeholder talking about Muro products in an article. See this is some more text showing you how this is going to look.</p>
+      <p>Professional Deck Builder is written exclusively for professionals in the deck, dock and railing industry — pros who need to stay on top of the latest trends, building code requirements and new products.
+Kim Katwijk, renown decking professional, reviews his Muro tool. Kim remains a loyal Muro supporter...</p>
     </div>
   </div>
 
@@ -31,9 +36,12 @@ signature auto-feed products. Select the title or picture to read more.</p>
 
     <div class="description">
       <h3><a href="/downloads/articles/extreme_how_to.pdf" target="_blank">Extreme How To: SpotLight</a></h3>
-      <h4>Author: NEED AUTHOR
-      <h4>Edition: NEED DATE</h4>
-      <p>This is some text as a placeholder talking about Muro products in an article. See this is some more text showing you how this is going to look.</p>
+      <h4>Author: Matt Weber</h4>
+      <h4>Edition: Oct. 2013</h4>
+      <p>Extreme How To is a guide to home improvement, focusing on professional-grade
+      projects for the do-it-yourselfer. EHT also provides the latest information on tools
+      and materials to get these projects completed with success.
+      Find out more about the Muro Ejector screws designed to eliminate pre-drilling of exotic hardwoods...</p>
     </div>
   </div>
 
@@ -43,8 +51,8 @@ signature auto-feed products. Select the title or picture to read more.</p>
     <div class="description">
       <h3><a href="/downloads/articles/boathouse_article.pdf" target="_blank">Extreme How To: Building A Boathouse</a></h3>
       <h4>Author: Matt Weber</h4>
-      <h4>Edition: NEED DATE</h4>
-      <p>This is some text as a placeholder talking about Muro products in an article. See this is some more text showing you how this is going to look.</p>
+      <h4>Edition: Sept. 2014</h4>
+      <p>Building a Boathouse?  Muro, well known for its reliability, is the go-to-tool for those bigger jobs.</p>
     </div>
   </div>
 
@@ -55,7 +63,7 @@ signature auto-feed products. Select the title or picture to read more.</p>
       <h3><a href="/downloads/articles/torque_support_article.pdf" target="_blank">BUILDERnews: Torque Support</a></h3>
       <h4>Author: Art Waldal</h4>
       <h4>Edition: May 2010</h4>
-      <p>This is some text as a placeholder talking about Muro products in an article. See this is some more text showing you how this is going to look.</p>
+      <p>Expert advice on home improvement and home construction, see an unbiased opinion by Art Waldal on Muro...</p>
     </div>
   </div>
 
