Setup the contact form in ruby, now passing info to the server. Also ensured message received confirmation popup window was not interfering with other JS code.

--- a/app/views/customer_service/_countries.html.erb
+++ b/app/views/customer_service/_countries.html.erb
@@ -1,3 +1,4 @@
+<%= select_tag :country, '
       <option value>-- Please Select One -- </option>
       <option value="Canada">Canada</option>
       <option value="United States">United States</option>
@@ -54,7 +55,7 @@
       <option value="Congo, The Democratic Republic of The">Congo, The Democratic Republic of The</option>
       <option value="Cook Islands">Cook Islands</option>
       <option value="Costa Rica">Costa Rica</option>
-      <option value="Cote D'ivoire">Cote D'ivoire</option>
+      <option value="Cote D\'ivoire">Cote D\'ivoire</option>
       <option value="Croatia">Croatia</option>
       <option value="Cuba">Cuba</option>
       <option value="Cyprus">Cyprus</option>
@@ -116,11 +117,11 @@
       <option value="Kazakhstan">Kazakhstan</option>
       <option value="Kenya">Kenya</option>
       <option value="Kiribati">Kiribati</option>
-      <option value="Korea, Democratic People's Republic of">Korea, Democratic People's Republic of</option>
+      <option value="Korea, Democratic People\'s Republic of">Korea, Democratic People\'s Republic of</option>
       <option value="Korea, Republic of">Korea, Republic of</option>
       <option value="Kuwait">Kuwait</option>
       <option value="Kyrgyzstan">Kyrgyzstan</option>
-      <option value="Lao People's Democratic Republic">Lao People's Democratic Republic</option>
+      <option value="Lao People\'s Democratic Republic">Lao People\'s Democratic Republic</option>
       <option value="Latvia">Latvia</option>
       <option value="Lebanon">Lebanon</option>
       <option value="Lesotho">Lesotho</option>
@@ -244,4 +245,4 @@
       <option value="Western Sahara">Western Sahara</option>
       <option value="Yemen">Yemen</option>
       <option value="Zambia">Zambia</option>
-      <option value="Zimbabwe">Zimbabwe</option>
+      <option value="Zimbabwe">Zimbabwe</option>'.html_safe, :id=>"countries", :class=>"dropdown" %>
