--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<script src="/slider/amazingslider.js"></script>
+<script src="/slider/initslider-1.js"></script>
 
 		<section id="slider" style="margin-left: 5px; display: block;">
 		    <div id="amazingslider-wrapper-1">
