--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,9 +1,7 @@
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
 
 <script src="http://programmingdrunk.com/current-projects/dropdownReplacement/jquery.scrollTo-1.4.2.js"></script>
 <script src="http://programmingdrunk.com/current-projects/dropdownReplacement/0.5/jquery.dropdownReplacement-0.5.3.js"></script>
-
 
 <h2 class="heading">CONTACT</h2>
 
@@ -60,71 +58,67 @@
 
 <section id="contact-form" class="group">
   <h3>SEND US A MESSAGE</h3>
-  <form action="" class="basic-form group">
-  <div class="input">
-    <label for="first_name">Name *</label>
-    <input type="text" name="first_name">
-  </div>
 
-  <div class="input">
-    <label for="last_name">Email Address *</label>
-    <input type="text" name="initial">
-  </div>
+  <%= form_tag url_for(:controller =>'contact', :action =>'contact_form'), :method => 'post', :class =>"basic-form group" do %>
 
-  <div class="input">
-    <label for="company">Company *</label>
-    <input type="text" name="company">
-  </div>
+    <div class="input">
+      <%= label_tag :name %>
+      <%= text_field_tag :name %>
+    </div>
 
-  <div class="input">
-    <label for="model">Product Interest</label>
-    <select class="model-number" id="product_interest" name="countries">
-        <option value="<%= nil %>">-- Please Select a Tool --
-      <% @tools.each do |tool| %>
-        <option value="<%= tool.product_code %>"><%= tool.product_code %></option>
-      <% end %>
-    </select>
-  </div>
+    <div class="input">
+      <%= label_tag :email, 'Email Address' %>
+      <%= text_field_tag :email %>
+    </div>
 
-  <div class="input">
-    <label for="last_name">City *</label>
-    <input type="text" name="initial">
-  </div>
+    <div class="input">
+      <%= label_tag :company %>
+      <%= text_field_tag :company %>
+    </div>
 
-  <div class="input">
-    <label for="province_or_state">Province / State *</label>
-    <input type="text" name="province_or_state">
-  </div>
+    <div class="input">
+      <%= label_tag :model, "Product Interest" %>
+      <%= select_tag :model, options_for_select(@tools.collect{ |tool| [tool.product_code, tool.id] }), :class=>"model-number", :id=>"product_interest" %>
+      </select>
+    </div>
 
-  <div class="input">
-    <label for="country">Country *</label>
-    <select id="countries" class="dropdown" name="countries">
+    <div class="input">
+      <%= label_tag :city %>
+      <%= text_field_tag :city %>
+    </div>
+
+    <div class="input">
+      <%= label_tag :province_or_state, "Province / State" %>
+      <%= text_field_tag :province_or_state %>
+    </div>
+
+    <div class="input">
+      <%= label_tag :country %>
       <%= render 'customer_service/countries' %>
+    </div>
 
-    </select>
-  </div>
+    <div class="input">
+      <%= label_tag :phone_number %>
+      <%= text_field_tag :phone_number %>
+    </div>
 
-  <div class="input">
-    <label for="phone_number">Phone Number</label>
-    <input type="text" name="phone_number">
-  </div>
+    <div class="input comments">
+      <%= label_tag :comments %>
+      <!-- <textarea rows="8" cols="100"></textarea> -->
+      <%= text_area_tag :comments, nil, rows: 8, cols: 25 %>
+    </div>
 
-  <div class="input comments">
-    <label for="comments">Comments</label>
-    <textarea rows="8" cols="100"></textarea>
-  </div>
-
-  <div class="">
-    <input class="submit" type="submit" value="Submit">
-  </div>
-</form>
+    <div class="">
+      <input class="submit" type="submit" value="Submit">
+    </div>
+  <% end %>
 </section>
+
 
 <script>
   $("#countries").dropdownReplacement({optionsDisplayNum: 10});
   $("#product_interest").dropdownReplacement({optionsDisplayNum: 10});
 </script>
-
 
 
 
