--- a/app/views/customer_service/_countries.html.erb
+++ b/app/views/customer_service/_countries.html.erb
@@ -245,4 +245,4 @@
       <option value="Western Sahara">Western Sahara</option>
       <option value="Yemen">Yemen</option>
       <option value="Zambia">Zambia</option>
-      <option value="Zimbabwe">Zimbabwe</option>'.html_safe, :id=>"countries", :class=>"dropdown" %>
+      <option value="Zimbabwe">Zimbabwe</option>'.html_safe, :required=>"", "data-parsley-required-message"=>"Your country is required to send a message.", :id=>"countries", :class=>"dropdown" %>
