--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -1,8 +1,12 @@
 <h2 class="heading">Search</h2>
 
-<%= form_tag search_path, :controller => 'welcome', :action => 'search_results', :id=>"search_form", method: :get do  %>
-  <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag 'Search' %>
+<%= form_tag search_path, id: "search_form", method: :get do  %>
+  <%= text_field_tag :q, nil %>
+<%= submit_tag "Search" %>
+<% end %>
+
+<% unless @query.blank? %>
+  <p>Your search query "<%= @query %>" returned the following results:</p>
 <% end %>
 
 <section id="search_results">
