--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -47,7 +47,13 @@ section#search_results {
   h4 {
     font-family: 'Helvetica-Bold', Arial;
     font-size: 1.2em;
-    text-align: center;
+    margin-bottom: 10px;
+
+  }
+
+  h5 {
+    font-family: 'Helvetica-Bold', Arial;
+    font-size: 1em;
   }
 
   a {
@@ -61,9 +67,11 @@ section#search_results {
 
   .left {
     display: inline-block;
-
     img {
       border: 1px solid #ccc;
+      display: block;
+
+
 
       &:hover {
         border-color: $darkgreen;
@@ -74,7 +82,7 @@ section#search_results {
   .right {
     display: inline-block;
     width: 60%;
-    margin: 20px 0 0 2%;
+    margin-left: 2%;
     vertical-align: top;
   }
 }
@@ -82,7 +90,27 @@ section#search_results {
 .result {
   margin-bottom: 50px;
   display: block;
-
   width: 95%;
   margin-left: 5%;
+}
+
+div#screws-results {
+
+  .right {
+    display: block;
+    width: 60%;
+    margin-left: 0;
+  }
+  .left {
+    width: auto;
+
+    img {
+      width: auto;
+      margin:20px 0 0;
+    }
+  }
+  h4 {
+    text-align: left;
+    width: 100%;
+  }
 }
