--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -69,9 +69,6 @@ section#search_results {
     display: inline-block;
     img {
       border: 1px solid #ccc;
-      display: block;
-
-
 
       &:hover {
         border-color: $darkgreen;
@@ -106,7 +103,7 @@ div#screws-results {
 
     img {
       width: auto;
-      margin:20px 0 0;
+      margin: 0 0 20px;
     }
   }
   h4 {
