--- a/app/views/products/accessories.html.erb
+++ b/app/views/products/accessories.html.erb
@@ -8,7 +8,7 @@ with each accessory. Click the button below to view our <a href="/products/acces
   </div>
 <% end %>
 
-<div class="accessory">
+<div class="accessory" id="screw_pouch">
   <h3>Screw Pouch</h3>
   <h4>Description</h4>
   <p>Complete with belt clip, keeps a bundle of screw
@@ -22,7 +22,7 @@ strips close at hand for quick loading.</p>
   </div>
 </div>
 
-<div class="accessory carry-bag">
+<div class="accessory carry-bag" id="carry_bag">
   <h3>Carry Bag</h3>
 
   <h4>Description</h4>
@@ -38,7 +38,7 @@ series of tools.</p>
   </div>
 </div>
 
-<div class="accessory extension">
+<div class="accessory extension" id="extension_handle">
   <h3>Extension Handles</h3>
 
   <h4>Description</h4>
