Updated trailer/rv page as well as the international distribitors page.

--- a/app/views/applications/trailer_bus_rv.html.erb
+++ b/app/views/applications/trailer_bus_rv.html.erb
@@ -37,11 +37,24 @@
 			<p>Tailor made solution for securing heavy gauge floors (wood to steel or aluminum). The heaviest duty system on the market. 100 screws per coil. No one else compares. <strong><a href="<%= products_tool_path(:id=>6) %>"> Find out more.</a></strong></p>
 		</div>
 	</article>
+
+	<article>
+		<a href="<%= products_tool_path(:id=>9) %>"><img src="/products/tools/index/vl62.png" alt="EFVL62"></a>
+		<div>
+			<h4><a href="<%= products_tool_path(:id=>3) %>">EFVL62
+			</a></h4>
+
+			<p>A lighter weight solution to secure your floors. This 1700 RPM model is perfect for many jobs.<br>
+<strong><a href="<%= products_tool_path(:id=>9) %>"> Find out more.</a></strong></p>
+		</div>
+	</article>
+
 	<article>
 		<a href="<%= products_tool_path(:id=>3) %>"><img src="/applications/trailer/ch7260-wall-skinning.png" alt="CH7260 - Wall Skinning"></a>
 		<div>
 			<h4><a href="<%= products_tool_path(:id=>3) %>">CH7260 - Metal Pro
-</a></h4>
+			</a></h4>
+
 			<p>This tool coupled with our wall skinning screw provides a unique solution for side wall fabrication.
 <strong><a href="<%= products_tool_path(:id=>3) %>"> Find out more.</a></strong></p>
 		</div>
