--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 				<nav class="top group">
 					<div class="social-links">
 						<a href="https://www.youtube.com/channel/UCV9IO9TKgZY3aADGA3abS4Q/videos"><img src="/youtube-header.png" alt="Muro Youtube page"></a>
-						<a href="#"><img src="/facebook-header.png" alt="Muro Facebook Page"></a>
+						<a href="https://www.facebook.com/pages/Muro-North-America/269584249834668"><img src="/facebook-header.png" alt="Muro Facebook Page"></a>
 					</div>
 
 					<h2 style="display:none">THE ORIGINATORS OF AUTO-FEED <br>CONTINUE TO DRIVE INNOVATION</h2>
@@ -205,8 +205,8 @@
 
 			<div class="social-copy">
 				<a href="<%= root_url %>"><img class="muro" src="/muro-small.jpg" alt="Muro Homepage"></a>
-				<a href="https://www.youtube.com/channel/UCV9IO9TKgZY3aADGA3abS4Q/videos"><img class="youtube" src="/youtube-footer.jpg" alt="Muro Youtube Page"></a>
-				<a href=""><img class="facebook" src="/facebook-footer.jpg" alt="Muro Facebook Page"></a>
+				<a href="https://www.youtube.com/channel/UCV9IO9TKgZY3aADGA3abS4Q/videos" target="_blank"><img class="youtube" src="/youtube-footer.jpg" alt="Muro Youtube Page"></a>
+				<a href="https://www.facebook.com/pages/Muro-North-America/269584249834668" target="_blank"><img class="facebook" src="/facebook-footer.jpg" alt="Muro Facebook Page"></a>
 
 				<p class="copyright">&copy;2015 Muro North America</p>
 			</div>
