Fixed slider icon. Added videos to appropriate tools.

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -128,6 +128,7 @@ tr.separator td {
   padding: 2% 1%;
   width: 16.66666666666667%;
   background: none;
+  text-align: center;
 }
 
 .detail-box h4 {
