--- a/app/views/applications/more_applications.html.erb
+++ b/app/views/applications/more_applications.html.erb
@@ -118,7 +118,7 @@
       </tr>
 
       <tr class="application top-border">
-        <td class="tool">Roof Stiching (Metal to Metal)</td>
+        <td class="tool">Roof Stitching (Metal to Metal)</td>
       </tr>
 
       <tr class="application top-border">
@@ -330,7 +330,7 @@
       <!--  Sub Floor (wood/cement boards) -->
         <tr class="tool top-border">
           <td class="CH7390"><a href="<%= products_tool_path(id: 1) %>"><span class="check" alt="Check"></span> CH7390</a></td>
-          <td class="CH7392SF"><img src="/applications/more_applications/check.png" alt="Check"> CH7392SF</td>
+          <td class="CH7392SF"><a href="<%= products_tool_path(id: 1) %>"><span class="check" alt="Check"></span> CH7392SF</a></td>
           <td class="CH7390SW"><a href="<%= products_tool_path(id: 1) %>"><span class="check" alt="Check"></span> CH7390SW</a></td>
           <td class="CH7241DE"></td>
           <td class="CH7241WU"></td>
@@ -825,7 +825,7 @@
           <td class="HDVL71"></td>
           <td class="FLVL41"></td>
           <td class="LWVL32"></td>
-          <td class="LHVL32"></td>
+          <td class="LHVL32"><a href="<%= products_tool_path(id: 8) %>"><span class="check" alt="Check"></span> LHVL32</a></td>
         </tr>
 
         <!-- Sheet Metal Applications -->
