--- a/app/views/products/tools/show.html.erb
+++ b/app/views/products/tools/show.html.erb
@@ -17,12 +17,15 @@
     <%= render 'ch7260_specializations' %>
   <% end %>
 
+    <%= render 'tool_videos' %>
 
     <%= link_to products_tools_path do %>
       <div class="see_more_button top-space">
         <h3>See More Tools</h3>
       </div>
     <% end %>
+
+
   </section>
 
   <section class="right">
