--- a/app/views/distributors/online.html.erb
+++ b/app/views/distributors/online.html.erb
@@ -1,6 +1,6 @@
 <h2 class="heading distributors">Online Distributors</h2>
 
-<p>Below is a list of the online distributors for Muro products. Follow the link icons below to be directed to the site.</p>
+<p>Below is a list of the online distributors for Muro products. Click below to be directed to the site.</p>
 
 <section class="group">
   <div class="distributor two-col group no-margin-left">
