Added accessories table, same style as more_applications table.

--- a/app/assets/stylesheets/accessories.scss
+++ b/app/assets/stylesheets/accessories.scss
@@ -179,4 +179,21 @@
   transform: rotate(180deg);
 }
 
+#accessories-chart {
+  margin-top: 75px;
+
+  h2 {
+    font-family: 'Helvetica-Roman', Arial;
+    font-size: 1.6em;
+  }
+
+  strong {
+    font-family: 'Helvetica-Bold', Arial;
+  }
+
+  p {
+    margin: 20px 0;
+  }
+}
+
 
