--- a/app/views/applications/more_applications.html.erb
+++ b/app/views/applications/more_applications.html.erb
@@ -12,7 +12,7 @@
   </div>
 
 
-<section id="application" style="clear:both;">
+<section class="big_table" style="clear:both;">
   <table id="fixed-column";>
     <thead>
       <tr>
@@ -1197,6 +1197,4 @@
             .scrollLeft($("#table-container").scrollLeft());
     });
   });
-
-  $('.fixed').makeFixed();
 </script>
