--- a/app/views/products/accessories.html.erb
+++ b/app/views/products/accessories.html.erb
@@ -1,8 +1,8 @@
 <h2 class="heading">Accessories</h2>
   <p>Below are the accessories made exclusively for Muro North America Tools. To view a full list of tools you can use
-with each accessory. Click the button below to view our <a href="/products/accessories/Accessories-Table.pdf" target="_blank">Accessories Chart</a></p>
+with each accessory. Click the button below to view our <a href="#accessories-chart">Accessories Chart</a></p>
 
-<%= link_to '/products/accessories/Accessories-Table.pdf', :target=>"_blank" do %>
+<%= link_to '#accessories-chart' do %>
   <div class="see_more_button go-to">
     <h3>Accessories Chart</h3>
   </div>
@@ -98,6 +98,24 @@ series of tools.</p>
 
 <%= render 'accessories_table' %>
 
-  <div class="see_more_button go-back move-down">
-    <a href="#"><h3>Back to Top</h3></a>
-  </div>
+  <a href="#screw_pouch" class="go-top">Back To Top</a>
+
+<script>
+// The JavaScript to add/remove CSS classes to the back to top button when scroll down/up.
+  $(window).scroll(function(event){
+  var scroll = $(window).scrollTop();
+    if (scroll >= 100) {
+      $(".go-top").addClass("show");
+    } else {
+      $(".go-top").removeClass("show");
+    }
+});
+
+  $('.go-top').click(function(){
+  $('html, body').animate({
+    scrollTop: $( $(this).attr('href') ).offset().top
+  }, 1000);
+});
+
+
+</script>
