CH7390 different languages added to product manuals.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -7,6 +7,10 @@
 		font-family: 'Helvetica-Bold';
 	}
 
+	strong {
+		font-family: 'Helvetica-Bold' !important;
+	}
+
 	p a {
 		font-family: 'Helvetica-Bold';
 	}
