--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -45,7 +45,7 @@
     clear: none;
     display: block;
     width: 22%;
-    margin: 40px 0 0 4%;
+    margin: 30px 0 0px 4%;
   }
 
   .three-per-line {
