--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -776,8 +776,8 @@ tr.tool {
 		background: #595959;
 		color: white;
 		vertical-align: center;
-		font-size: 1.2em;
-
+		font-size: 1em !important;
+		padding-bottom: 6px;
 
 		&:nth-child(even) {
 			background: #3f3f3f;
@@ -791,15 +791,14 @@ tr.top-border {
 }
 
 
-td.tool {
-	padding:20px 0 6px;
-}
 
 tr.tool, tr.application {
-	height: 40px;
+	height: 46px;
 }
 
-
+tr.application td {
+	padding-top: 20px !important;
+}
 
 .big_table table th {
 	font-size: 1.3em;
@@ -812,10 +811,11 @@ tr.tool, tr.application {
 	background: #979797;
 	color: #2d2d2d;
 }
-.big_table table .tool {
-	font-size: .7em;
+.big_table table td.tool {
+	font-size: 1em;
 	background: none;
 	color: #2d2d2d;
+	padding-top: 10px;
 }
 .big_table table .black {
 	font-family: 'Helvetica-Black', Arial;
